<resources>
    <string name="app_name">Rust on Android</string>
    <string name="btn_eval">Eval</string>
    <string name="btn_play_video">Play Video</string>
    <string name="image_processing">Image Processing</string>
    <string name="node_versions">Node Versions</string>
    <string name="message">Message</string>
    <string name="render">Render</string>
    <string name="mandelbrot">Mandelbrot</string>
    <string name="fractal">Fractal</string>
</resources>
